<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.yang.nav.view.activity.MainActivity">

        <Button
            android:id="@+id/ll_plane"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@mipmap/bg_plane_model"
            android:text="@string/plane_model"
            android:textStyle="bold" />

        <Button
            android:id="@+id/ll_work"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@mipmap/bg_work_model"
            android:text="@string/work_model"
            android:textStyle="bold" />

        <Button
            android:id="@+id/ll_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@mipmap/bg_data_model"
            android:text="@string/data_manager_model"
            android:textStyle="bold" />

</LinearLayout>
