<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_map_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.yang.nav.view.activity.MapViewActivity">

    <com.yang.nav.map.CustomMapView
        android:layout_below="@+id/ll_info"
        android:id="@+id/mv_show"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_margin="16dp"
            android:layout_marginTop="8dp"
            android:id="@+id/ll_info"
            android:background="@drawable/new_card"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_marginTop="8dp"
                android:layout_marginBottom="4dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/speed"/>

                <TextView
                    android:id="@+id/tv_speed"
                    android:layout_marginLeft="8dp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="111111"/>

                <TextView
                    android:layout_marginLeft="8dp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/direction" />
                <TextView
                    android:id="@+id/tv_direction"
                    android:layout_marginLeft="8dp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="111111"/>
            </LinearLayout>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@mipmap/horizontal_line"/>
            <LinearLayout
                android:layout_marginTop="4dp"
                android:layout_marginBottom="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/longitude" />

                <TextView
                    android:id="@+id/tv_longitude"
                    android:layout_marginLeft="8dp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="111111"/>

                <TextView
                    android:layout_marginLeft="8dp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/latitude" />
                <TextView
                    android:id="@+id/tv_latitude"
                    android:layout_marginLeft="8dp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="111111"/>
            </LinearLayout>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@mipmap/horizontal_line"/>
        </LinearLayout>
        <RelativeLayout
            android:id="@+id/rl_zoom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignWithParentIfMissing="true"
            android:layout_marginBottom="20dp"
            android:layout_marginRight="13dp"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <ImageButton
                android:id="@+id/btn_zoom_in"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:contentDescription="@string/zoom_in"
                android:layout_alignParentTop="true"
                android:src="@drawable/btn_zoom_in"
                android:background="@drawable/circle_button_with_shadow"
                android:clickable="true" />

            <ImageButton
                android:id="@+id/btn_zoom_out"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_below="@id/btn_zoom_in"
                android:contentDescription="@string/zoom_out"
                android:layout_marginTop="13dp"
                android:src="@drawable/btn_zoom_out"
                android:background="@drawable/circle_button_with_shadow"
                android:clickable="true" />

        </RelativeLayout>

        <ImageButton
            android:id="@+id/btn_location_mode"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="36dp"
            android:layout_marginLeft="36dp"
            android:background="@drawable/circle_button_with_shadow"
            android:src="@mipmap/ic_qu_direction_location"/>

        <Button
            android:id="@+id/btn_start_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@mipmap/ic_start_location"
            android:text="@string/start_location"
            android:layout_alignBottom="@+id/btn_location_mode"
            android:layout_toRightOf="@+id/btn_location_mode"
            android:layout_toEndOf="@+id/btn_location_mode"
            android:layout_marginLeft="58dp"
            android:layout_marginStart="58dp" />
    </RelativeLayout>


</FrameLayout>
